--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* line 5, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -111,20 +111,21 @@ html body {
   display: inline-block;
   vertical-align: top;
   height: 50px;
-  width: 25%;
+  width: 20%;
   background: #666;
   font-size: 1rem;
+  border-right: 1px solid black;
   transition: all .3s ease-in-out;
 }
-/* line 46, ../sass/main.scss */
+/* line 47, ../sass/main.scss */
 .all header nav > ul li:hover {
   background: red;
 }
-/* line 49, ../sass/main.scss */
+/* line 50, ../sass/main.scss */
 .all header nav > ul li.active {
   background: red;
 }
-/* line 52, ../sass/main.scss */
+/* line 53, ../sass/main.scss */
 .all header nav > ul li a {
   display: inline-block;
   vertical-align: top;
@@ -135,64 +136,73 @@ html body {
   text-decoration: none;
   font-weight: bold;
 }
-/* line 62, ../sass/main.scss */
+/* line 63, ../sass/main.scss */
 .all header nav > ul li .subMenu {
   display: none;
   position: relative;
   z-index: 2;
   transition: all .3s ease-in-out;
 }
-/* line 67, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 .all header nav > ul li .subMenu li {
   display: block;
   width: 100%;
 }
 /* line 74, ../sass/main.scss */
+.all header nav > ul li:last-child {
+  border: none;
+}
+/* line 77, ../sass/main.scss */
 .all header nav > ul li:last-child:hover .subMenu {
   display: block;
 }
-/* line 85, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .all #section_1 .slider .item {
   height: 400px;
 }
-/* line 88, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 .all #section_1 .slider .item img {
   width: 100%;
 }
-/* line 95, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .all #left_menu {
   float: left;
-  margin-left: 5%;
-  width: 150px;
-  height: 250px;
+  width: 15%;
   background: #b9cc66;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   padding: 1em;
 }
-/* line 105, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 .all #left_menu .left_menu_head {
   text-align: center;
   margin-bottom: 1em;
 }
-/* line 110, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .all #left_menu .left_menu_list nav {
   width: 80%;
   margin: 0 auto;
 }
-/* line 114, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .all #left_menu .left_menu_list nav ul li {
   margin-bottom: .7em;
 }
-/* line 118, ../sass/main.scss */
-.all #left_menu .left_menu_list nav ul li a.act {
+/* line 124, ../sass/main.scss */
+.all #left_menu .left_menu_list nav ul li.act a {
   text-decoration: none;
   color: red;
   font-size: 1.2em;
   font-weight: bold;
 }
-/* line 131, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
+.all #left_menu .left_menu_list a.act {
+  text-decoration: none;
+  color: red;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+/* line 144, ../sass/main.scss */
 .all #content {
   width: 60%;
   margin: 0 auto;
@@ -202,12 +212,24 @@ html body {
   -moz-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 139, ../sass/main.scss */
+/* line 152, ../sass/main.scss */
+.all #content.right {
+  float: right;
+  width: 80%;
+}
+/* line 156, ../sass/main.scss */
 .all #content .breadcrums {
   margin: 1em 0 0 1em;
   height: 2em;
 }
-/* line 147, ../sass/main.scss */
+/* line 163, ../sass/main.scss */
+.all #content .some_content {
+  padding: 20px 0;
+  height: auto;
+  max-height: 500px;
+  overflow-y: auto;
+}
+/* line 168, ../sass/main.scss */
 .all #content .some_content h3 {
   margin-bottom: 2em;
   text-align: center;
@@ -215,12 +237,23 @@ html body {
   font-weight: bold;
   color: #db804b;
 }
-/* line 154, ../sass/main.scss */
+/* line 175, ../sass/main.scss */
+.all #content .some_content #about {
+  margin: 20px auto;
+  text-align: center;
+}
+/* line 179, ../sass/main.scss */
 .all #content .some_content .gallery {
   width: 100%;
   margin: 0 auto;
+  font-size: 0;
+  text-align: center;
 }
-/* line 157, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
+.all #content .some_content .gallery iframe {
+  width: 90%;
+}
+/* line 187, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item {
   display: inline-block;
   width: 33%;
@@ -228,24 +261,149 @@ html body {
   text-align: center;
   vertical-align: bottom;
 }
-/* line 163, ../sass/main.scss */
+/* line 195, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic {
   margin: 10px 20px;
+  position: relative;
 }
-/* line 166, ../sass/main.scss */
-.all #content .some_content .gallery .gallery_item .pic div div.img {
+/* line 199, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .pic .bg {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  transition: all .2s linear;
+}
+/* line 210, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .pic .bg p {
+  position: relative;
+  top: 45%;
+  color: white;
+  font-size: 1.5rem;
+}
+/* line 218, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .pic div.img {
   height: auto;
 }
-/* line 169, ../sass/main.scss */
-.all #content .some_content .gallery .gallery_item .pic div div.img img {
+/* line 221, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .pic div.img img {
   width: 100%;
 }
-/* line 180, ../sass/main.scss */
+/* line 226, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .text {
+  margin: 0 20px;
+  font-size: 1rem;
+}
+/* line 231, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item .price {
+  margin: 0 20px;
+  font-size: 1rem;
+  background: #bab406;
+  color: #ba0606;
+}
+/* line 237, ../sass/main.scss */
+.all #content .some_content .gallery .gallery_item:hover .bg {
+  opacity: 1;
+}
+/* line 242, ../sass/main.scss */
+.all #content .some_content .gallery .conts {
+  font-size: 20px;
+  text-align: center;
+}
+/* line 247, ../sass/main.scss */
 .all #content .some_content .paggination {
   text-align: center;
-  margin-bottom: 2em;
+  margin: 2em auto;
 }
-/* line 190, ../sass/main.scss */
+/* line 250, ../sass/main.scss */
+.all #content .some_content .paggination a {
+  margin: 0 5px;
+}
+/* line 252, ../sass/main.scss */
+.all #content .some_content .paggination a.here {
+  color: red;
+  text-decoration: none;
+}
+/* line 263, ../sass/main.scss */
+.all .popUp {
+  display: none;
+}
+/* line 265, ../sass/main.scss */
+.all .popUp .popUp_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+}
+/* line 273, ../sass/main.scss */
+.all .popUp .popUp_bg .window {
+  background: #fff;
+  min-width: 320px;
+  min-height: 400px;
+  width: 500px;
+  height: 500px;
+  margin: 2% auto;
+  text-align: center;
+  z-index: 9999;
+  position: relative;
+}
+/* line 283, ../sass/main.scss */
+.all .popUp .popUp_bg .window p {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+/* line 289, ../sass/main.scss */
+.all .popUp .popUp_bg .window .inner {
+  padding: 2%;
+}
+/* line 291, ../sass/main.scss */
+.all .popUp .popUp_bg .window .inner h3 {
+  margin-top: 15%;
+}
+/* line 294, ../sass/main.scss */
+.all .popUp .popUp_bg .window .inner form {
+  margin-top: 20%;
+}
+/* line 296, ../sass/main.scss */
+.all .popUp .popUp_bg .window .inner form input, .all .popUp .popUp_bg .window .inner form select {
+  display: block;
+  width: 80%;
+  margin: 30px auto;
+}
+/* line 304, ../sass/main.scss */
+.all .popUp .popUp_bg .windowThx {
+  display: none;
+  background: #fff;
+  min-width: 320px;
+  min-height: 400px;
+  width: 500px;
+  height: 500px;
+  margin: 2% auto;
+  text-align: center;
+  z-index: 9999;
+  position: relative;
+}
+/* line 315, ../sass/main.scss */
+.all .popUp .popUp_bg .windowThx p {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+/* line 321, ../sass/main.scss */
+.all .popUp .popUp_bg .windowThx h3 {
+  padding-top: 45%;
+}
+/* line 329, ../sass/main.scss */
 .all footer {
   position: absolute;
   bottom: 0;
@@ -255,16 +413,16 @@ html body {
   background: #4ac0ff;
   text-align: center;
 }
-/* line 199, ../sass/main.scss */
+/* line 338, ../sass/main.scss */
 .all footer div.footer_wrap {
   margin-top: 1em;
 }
-/* line 206, ../sass/main.scss */
+/* line 345, ../sass/main.scss */
 .all footer div.footer_wrap .mySocMedia div {
   display: inline-block;
   margin: 5px;
 }
-/* line 209, ../sass/main.scss */
+/* line 348, ../sass/main.scss */
 .all footer div.footer_wrap .mySocMedia div a {
   color: black;
 }
