--- a/css/main.css
+++ b/css/main.css
@@ -114,18 +114,19 @@ html body {
   width: 20%;
   background: #666;
   font-size: 1rem;
+  font-size: 14px;
   border-right: 1px solid black;
   transition: all .3s ease-in-out;
 }
-/* line 47, ../sass/main.scss */
+/* line 48, ../sass/main.scss */
 .all header nav > ul li:hover {
   background: red;
 }
-/* line 50, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
 .all header nav > ul li.active {
   background: red;
 }
-/* line 53, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 .all header nav > ul li a {
   display: inline-block;
   vertical-align: top;
@@ -136,35 +137,35 @@ html body {
   text-decoration: none;
   font-weight: bold;
 }
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .all header nav > ul li .subMenu {
   display: none;
   position: relative;
   z-index: 2;
   transition: all .3s ease-in-out;
 }
-/* line 68, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 .all header nav > ul li .subMenu li {
   display: block;
   width: 100%;
 }
-/* line 74, ../sass/main.scss */
+/* line 75, ../sass/main.scss */
 .all header nav > ul li:last-child {
   border: none;
 }
-/* line 77, ../sass/main.scss */
+/* line 78, ../sass/main.scss */
 .all header nav > ul li:last-child:hover .subMenu {
   display: block;
 }
-/* line 90, ../sass/main.scss */
+/* line 91, ../sass/main.scss */
 .all #section_1 .slider .item {
   height: 400px;
 }
-/* line 93, ../sass/main.scss */
+/* line 94, ../sass/main.scss */
 .all #section_1 .slider .item img {
   width: 100%;
 }
-/* line 100, ../sass/main.scss */
+/* line 101, ../sass/main.scss */
 .all #left_menu {
   float: left;
   width: 15%;
@@ -174,35 +175,35 @@ html body {
   border-radius: 10px;
   padding: 1em;
 }
-/* line 108, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .all #left_menu .left_menu_head {
   text-align: center;
   margin-bottom: 1em;
 }
-/* line 113, ../sass/main.scss */
+/* line 114, ../sass/main.scss */
 .all #left_menu .left_menu_list nav {
   width: 80%;
   margin: 0 auto;
 }
-/* line 117, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .all #left_menu .left_menu_list nav ul li {
   margin-bottom: .7em;
 }
-/* line 124, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .all #left_menu .left_menu_list nav ul li.act a {
   text-decoration: none;
   color: red;
   font-size: 1.2em;
   font-weight: bold;
 }
-/* line 135, ../sass/main.scss */
+/* line 136, ../sass/main.scss */
 .all #left_menu .left_menu_list a.act {
   text-decoration: none;
   color: red;
   font-size: 1.2em;
   font-weight: bold;
 }
-/* line 144, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 .all #content {
   width: 60%;
   margin: 0 auto;
@@ -212,24 +213,24 @@ html body {
   -moz-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 152, ../sass/main.scss */
+/* line 154, ../sass/main.scss */
 .all #content.right {
   float: right;
   width: 80%;
 }
-/* line 156, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 .all #content .breadcrums {
   margin: 1em 0 0 1em;
   height: 2em;
 }
-/* line 163, ../sass/main.scss */
+/* line 165, ../sass/main.scss */
 .all #content .some_content {
   padding: 20px 0;
   height: auto;
   max-height: 500px;
   overflow-y: auto;
 }
-/* line 168, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .all #content .some_content h3 {
   margin-bottom: 2em;
   text-align: center;
@@ -237,23 +238,23 @@ html body {
   font-weight: bold;
   color: #db804b;
 }
-/* line 175, ../sass/main.scss */
+/* line 177, ../sass/main.scss */
 .all #content .some_content #about {
   margin: 20px auto;
   text-align: center;
 }
-/* line 179, ../sass/main.scss */
+/* line 181, ../sass/main.scss */
 .all #content .some_content .gallery {
   width: 100%;
   margin: 0 auto;
   font-size: 0;
   text-align: center;
 }
-/* line 184, ../sass/main.scss */
+/* line 186, ../sass/main.scss */
 .all #content .some_content .gallery iframe {
   width: 90%;
 }
-/* line 187, ../sass/main.scss */
+/* line 189, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item {
   display: inline-block;
   width: 33%;
@@ -261,12 +262,12 @@ html body {
   text-align: center;
   vertical-align: bottom;
 }
-/* line 195, ../sass/main.scss */
+/* line 197, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic {
   margin: 10px 20px;
   position: relative;
 }
-/* line 199, ../sass/main.scss */
+/* line 201, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic .bg {
   opacity: 0;
   position: absolute;
@@ -278,61 +279,61 @@ html body {
   cursor: pointer;
   transition: all .2s linear;
 }
-/* line 210, ../sass/main.scss */
+/* line 212, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic .bg p {
   position: relative;
   top: 45%;
   color: white;
   font-size: 1.5rem;
 }
-/* line 218, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic div.img {
   height: auto;
 }
-/* line 221, ../sass/main.scss */
+/* line 223, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .pic div.img img {
   width: 100%;
 }
-/* line 226, ../sass/main.scss */
+/* line 228, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .text {
   margin: 0 20px;
   font-size: 1rem;
 }
-/* line 231, ../sass/main.scss */
+/* line 233, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item .price {
   margin: 0 20px;
   font-size: 1rem;
   background: #bab406;
   color: #ba0606;
 }
-/* line 237, ../sass/main.scss */
+/* line 239, ../sass/main.scss */
 .all #content .some_content .gallery .gallery_item:hover .bg {
   opacity: 1;
 }
-/* line 242, ../sass/main.scss */
+/* line 244, ../sass/main.scss */
 .all #content .some_content .gallery .conts {
   font-size: 20px;
   text-align: center;
 }
-/* line 247, ../sass/main.scss */
+/* line 249, ../sass/main.scss */
 .all #content .some_content .paggination {
   text-align: center;
   margin: 2em auto;
 }
-/* line 250, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .all #content .some_content .paggination a {
   margin: 0 5px;
 }
-/* line 252, ../sass/main.scss */
+/* line 254, ../sass/main.scss */
 .all #content .some_content .paggination a.here {
   color: red;
   text-decoration: none;
 }
-/* line 263, ../sass/main.scss */
+/* line 265, ../sass/main.scss */
 .all .popUp {
   display: none;
 }
-/* line 265, ../sass/main.scss */
+/* line 267, ../sass/main.scss */
 .all .popUp .popUp_bg {
   position: fixed;
   top: 0;
@@ -342,7 +343,7 @@ html body {
   background: rgba(0, 0, 0, 0.5);
   z-index: 20;
 }
-/* line 273, ../sass/main.scss */
+/* line 275, ../sass/main.scss */
 .all .popUp .popUp_bg .window {
   background: #fff;
   min-width: 320px;
@@ -354,32 +355,32 @@ html body {
   z-index: 9999;
   position: relative;
 }
-/* line 283, ../sass/main.scss */
+/* line 285, ../sass/main.scss */
 .all .popUp .popUp_bg .window p {
   cursor: pointer;
   position: absolute;
   right: 10px;
   top: 10px;
 }
-/* line 289, ../sass/main.scss */
+/* line 291, ../sass/main.scss */
 .all .popUp .popUp_bg .window .inner {
   padding: 2%;
 }
-/* line 291, ../sass/main.scss */
+/* line 293, ../sass/main.scss */
 .all .popUp .popUp_bg .window .inner h3 {
   margin-top: 15%;
 }
-/* line 294, ../sass/main.scss */
+/* line 296, ../sass/main.scss */
 .all .popUp .popUp_bg .window .inner form {
   margin-top: 20%;
 }
-/* line 296, ../sass/main.scss */
+/* line 298, ../sass/main.scss */
 .all .popUp .popUp_bg .window .inner form input, .all .popUp .popUp_bg .window .inner form select {
   display: block;
   width: 80%;
   margin: 30px auto;
 }
-/* line 304, ../sass/main.scss */
+/* line 306, ../sass/main.scss */
 .all .popUp .popUp_bg .windowThx {
   display: none;
   background: #fff;
@@ -392,18 +393,18 @@ html body {
   z-index: 9999;
   position: relative;
 }
-/* line 315, ../sass/main.scss */
+/* line 317, ../sass/main.scss */
 .all .popUp .popUp_bg .windowThx p {
   cursor: pointer;
   position: absolute;
   right: 10px;
   top: 10px;
 }
-/* line 321, ../sass/main.scss */
+/* line 323, ../sass/main.scss */
 .all .popUp .popUp_bg .windowThx h3 {
   padding-top: 45%;
 }
-/* line 329, ../sass/main.scss */
+/* line 331, ../sass/main.scss */
 .all footer {
   position: absolute;
   bottom: 0;
@@ -413,16 +414,16 @@ html body {
   background: #4ac0ff;
   text-align: center;
 }
-/* line 338, ../sass/main.scss */
+/* line 340, ../sass/main.scss */
 .all footer div.footer_wrap {
   margin-top: 1em;
 }
-/* line 345, ../sass/main.scss */
+/* line 347, ../sass/main.scss */
 .all footer div.footer_wrap .mySocMedia div {
   display: inline-block;
   margin: 5px;
 }
-/* line 348, ../sass/main.scss */
+/* line 350, ../sass/main.scss */
 .all footer div.footer_wrap .mySocMedia div a {
   color: black;
 }
